@@ -36,6 +36,7 @@ defined('_JEXEC') or die;
 					<div id="header_r">
 						<div id="logo"></div>
 						<jdoc:include type="modules" name="top" />
+						<jdoc:include type="modules" name="position-12" />
 					</div>
 				</div>
 			</div>
@@ -50,6 +51,7 @@ defined('_JEXEC') or die;
 								<td class="pill_m">
 								<div id="pillmenu">
 									<jdoc:include type="modules" name="user3" />
+									<jdoc:include type="modules" name="position-1" />
 								</div>
 								</td>
 								<td class="pill_r">&nbsp;</td>
@@ -62,10 +64,12 @@ defined('_JEXEC') or die;
 
 			<div id="search">
 				<jdoc:include type="modules" name="user4" />
+				<jdoc:include type="modules" name="position-12" />				
 			</div>
 
 			<div id="pathway">
 				<jdoc:include type="modules" name="breadcrumb" />
+				<jdoc:include type="modules" name="position-2" />				
 			</div>
 
 			<div class="clr"></div>
@@ -80,30 +84,39 @@ defined('_JEXEC') or die;
 				<div id="whitebox_m">
 					<div id="area">
 						<div id="leftcolumn">
-						<?php if ($this->countModules('left')) : ?>
+						<?php if ($this->countModules('left')
+								or $this->countModules('position-7')	
+						) : ?>
 							<jdoc:include type="modules" name="left" style="rounded" />
+							<jdoc:include type="modules" name="position-7" style="rounded" />
 						<?php endif; ?>
 						</div>
 
-						<?php if ($this->countModules('left')) : ?>
+						<?php if ($this->countModules('left')
+									or $this->countModules('position-7') 						
+						) : ?>
 						<div id="maincolumn">
 						<?php else: ?>
 						<div id="maincolumn_full">
 						<?php endif; ?>
-							<?php if ($this->countModules('user1 or user2')) : ?>
+							<?php if ($this->countModules('user1')  or  $this->countModules('user2') 
+							or ($this->countModules('position-9')  or  $this->countModules('position-10') ) ) : ?>hello
 								<table class="nopad user1user2">
 									<tr valign="top">
-										<?php if ($this->countModules('user1')) : ?>
+										<?php if ($this->countModules('user1') or $this->countModules('position-9')) : ?>
 											<td>
 												<jdoc:include type="modules" name="user1" style="xhtml" />
+												<jdoc:include type="modules" name="position-9" style="xhtml" />
 											</td>
 										<?php endif; ?>
-										<?php if ($this->countModules('user1 and user2')) : ?>
+										<?php if ($this->countModules('user1') or $this->countModules('position-9') 
+										and $this->countModules('user2') or $this->countModules('position-10')) : ?>
 											<td class="greyline">&nbsp;</td>
 										<?php endif; ?>
-										<?php if ($this->countModules('user2')) : ?>
+										<?php if ($this->countModules('user2') or $this->countModules('position-10')) : ?>
 											<td>
 												<jdoc:include type="modules" name="user2" style="xhtml" />
+												<jdoc:include type="modules" name="position-10" style="xhtml" />
 											</td>
 										<?php endif; ?>
 									</tr>
@@ -118,12 +131,21 @@ defined('_JEXEC') or die;
 										<jdoc:include type="message" />
 										<jdoc:include type="component" />
 										<jdoc:include type="modules" name="footer" style="xhtml"/>
-									</td>
-									<?php if ($this->countModules('right') and JRequest::getCmd('layout') != 'form') : ?>
+										<jdoc:include type="modules" name="position-5" style="xhtml" />
+										<jdoc:include type="modules" name="position-8"  style="xhtml" />
+										<jdoc:include type="modules" name="position-11"  style="xhtml" />
+										</td>
+									<?php if (($this->countModules('right') or 
+											$this->countModules('position-3') or
+											$this->countModules('position-4') 
+											)																						
+									and JRequest::getCmd('layout') != 'form') : ?>
 										<td class="greyline">&nbsp;</td>
 										<td width="170">
 											<jdoc:include type="modules" name="right" style="xhtml"/>
-										</td>
+											<jdoc:include type="modules" name="position-3" style="xhtml"/>
+											<jdoc:include type="modules" name="position-4" style="xhtml"/>
+											</td>
 									<?php endif; ?>
 								</tr>
 							</table>
@@ -147,8 +169,9 @@ defined('_JEXEC') or die;
 		<div id="footer">
 			<div id="footer_l">
 				<div id="footer_r">
-					<p id="syndicate">
-						<jdoc:include type="modules" name="syndicate" />
+					<p id="syndicate"> 
+						<jdoc:include type="modules" name="syndicate" style="xtml" />
+						<jdoc:include type="modules" name="position-14" style="xtml" />
 					</p>
 					<p id="power_by">
 						<?php 
