@@ -32,7 +32,21 @@
 		<position>footer</position>
 		<position>debug</position>
 		<position>syndicate</position>
-	</positions>
+		<position>position-1</position>
+		<position>position-2</position>
+		<position>position-3</position>
+		<position>position-4</position>
+		<position>position-5</position>
+		<position>position-6</position>
+		<position>position-7</position>
+		<position>position-8</position>
+		<position>position-9</position>
+		<position>position-10</position>
+		<position>position-11</position>
+		<position>position-12</position>
+		<position>position-13</position>
+		<position>position-14</position>
+		</positions>
 	<config>
 		<fields name="params">
 			<fieldset name="basic">
